syntax = "proto3";
package reports;

option go_package = "github.com/untangle/golang-shared/structs/protocolbuffers/SessionStatsEvent";

message SessionStatsEvent {
  int64 sessionID = 1;
  int64 timeStamp = 2;
  uint64 bytes = 3;
  uint64 clientBytes = 4;
  uint64 serverBytes = 5;
  uint32 byteRate = 6;
  uint32 clientByteRate = 7;
  uint32 serverByteRate = 8;
  uint64 packets = 9;
  uint64 clientPackets = 10;
  uint64 serverPackets = 11;
  uint32 packetRate = 12;
  uint32 clientPacketRate = 13;
  uint32 serverPacketRate = 14;
}